jasn/examples/invalid/unterminated_comment.jasn
/* Unterminated block comment */
{
  /* This comment is never closed
  value: 123
}
